--- a/templates/adminlte/_Main_layout.html
+++ b/templates/adminlte/_Main_layout.html
@@ -6,6 +6,20 @@
 <head>
   <title>{% block title %}{% endblock title %}</title>
   {% include "adminlte/headerrefrence.html" %}
+  <style type="text/css">
+    .bootstrap-tagsinput {
+        width: 100%;
+        
+    }
+    .bootstrap-tagsinput .tag {
+      background: gray;
+      padding:4px;
+      margin-right: 2px;
+      color: white;
+      border-radius: 4px;
+    }
+    
+</style>
 </head>
 
 <body class="hold-transition skin-blue sidebar-mini">
