--- a/templates/adminlte/footerrefrences.html
+++ b/templates/adminlte/footerrefrences.html
@@ -17,6 +17,7 @@
 <script src="{% static 'adminlte/plugins/jvectormap/jquery-jvectormap-1.2.2.min.js' %}"></script>
 <script src="{% static 'adminlte/plugins/jvectormap/jquery-jvectormap-world-mill-en.js' %}"></script>
 <!-- SlimScroll -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-tagsinput/0.6.0/bootstrap-tagsinput.min.js"></script>
 <script src="{% static 'adminlte/bower_components/jquery-slimscroll/jquery.slimscroll.min.js' %}"></script>
 <script src="https://cdn.jsdelivr.net/npm/chart.js@3.7.0/dist/chart.min.js"></script>
 <!-- ChartJS -->
@@ -35,6 +36,7 @@
     var myVal = $(event.relatedTarget).data('val');
     $(this).find("#pid").attr("href",myVal)
   }); 
+
 </script>
 <!-- /confirm delete product  adminlte -->
 <script>
