--- a/templates/adminlte/headerrefrence.html
+++ b/templates/adminlte/headerrefrence.html
@@ -19,7 +19,7 @@
 <link rel="stylesheet" href="{% static 'adminlte/bower_components/jvectormap/jquery-jvectormap.css' %}">
 <!-- Theme style -->
 <link rel="stylesheet" href="{% static 'adminlte/dist/css/AdminLTE.css' %}">
-
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-tagsinput/0.6.0/bootstrap-tagsinput.min.css"/>
 <!-- AdminLTE Skins. Choose a skin from the css/skins
      folder instead of downloading all of them to reduce the load. -->
 <link rel="stylesheet" href="{% static 'adminlte/dist/css/skins/_all-skins.min.css' %}">
