--- a/adminlte/templates/dashbord_admin.html
+++ b/adminlte/templates/dashbord_admin.html
@@ -43,7 +43,7 @@
     <!-- django messages end -->
 
     <!-- Main content -->
-    <section class="content">
+    <section class="content" >
       <!-- Info boxes -->
       <div class="row">
         <div class="col-md-3 col-sm-6 col-xs-12">
@@ -121,7 +121,7 @@
 
                   <div class="chart">
                     <!-- Sales Chart Canvas -->
-                    <canvas id="myChart" height="400px"></canvas>
+                    <canvas id="myChart" height="400px" onload="a()"></canvas>
                   </div>
                   <!-- /.chart-responsive -->
                 </div>
