--- a/templates/adminlte/_Main_layout.html
+++ b/templates/adminlte/_Main_layout.html
@@ -362,7 +362,6 @@
                   </a>
                   <ul class="treeview-menu">
                     <li><a href="/adminlte/order"><i class="fa fa-circle-o"></i> سفارش ها </a></li>
-                    <li><a href="pages/layout/boxed.html"><i class="fa fa-circle-o"></i> جزئیات سفارش ها </a></li>
                     <li><a href="pages/layout/boxed.html"><i class="fa fa-circle-o"></i> کدتخفیف </a></li>
                   </ul>
                 </li>
@@ -375,7 +374,7 @@
                     </span>
                   </a>
                   <ul class="treeview-menu">
-                    <li><a href="/adminlte/order"><i class="fa fa-circle-o"></i>کاربرها</a></li>
+                    <li><a href="/adminlte/user"><i class="fa fa-circle-o"></i>کاربرها</a></li>
                     <li><a href="pages/layout/boxed.html"><i class="fa fa-circle-o"></i>گروها ها</a></li>
                   </ul>
                 </li>
