--- a/adminlte/templates/login_admin.html
+++ b/adminlte/templates/login_admin.html
@@ -33,7 +33,7 @@
 <body class="hold-transition login-page">
 <div class="login-box">
   <div class="login-logo">
-    <a href="../../index2.html"><b>ورود به سایت</b></a>
+    <a href="../../index2.html"><b>ورود به ادمین  </b></a>
   </div>
   <!-- /.login-logo -->
   <div class="login-box-body">
