--- a/adminlte/templates/order/orders.html
+++ b/adminlte/templates/order/orders.html
@@ -106,6 +106,7 @@
                                     <th>مبلغ کل </th>
                                     <th>تعداد کالاها</th>
                                     <th>ویرایش</th>
+                                    <th>فاکتور</th>
                                 </tr>
                                 {% for order in page_obj %}
                                 <tr>
